--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "This is a project related to Node.js",
   "main": "index.js",
-  "scripts": {"start": "node index.js",
-    
+  "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Anupmahrajan/Node_project/issues"
   },
-  "homepage": "https://github.com/Anupmahrajan/Node_project#readme"
+  "homepage": "https://github.com/Anupmahrajan/Node_project#readme",
+  "dependencies": {
+    "axios": "^0.20.0"
+  }
 }
